--- a/chamber/styles/styles.css
+++ b/chamber/styles/styles.css
@@ -42,6 +42,7 @@ body{
     margin: 0 auto;
     display: grid;
 }
+
 header, footer{
     background-color: var(--main-color);
     color:white;
@@ -199,7 +200,7 @@ nav a:hover{
 }
 
 .spot img{
-    width:75%;
+    max-width:100%;
     height: auto;
 }
 
